Fix tests for Invitations and Passcodes
Signed-off-by: Duane May <duane.may@broadcom.com>